--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+
+#login-btn{
+  display: block;
+  margin: 0 auto;
+}
+#nav-sec{
+  
+  background-color: rgb(56, 57, 57) !important;
+}
+#clgimage{
+  width: 20rem;
+  display: block;
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#title-font{
+  font-family: 'Caveat', cursive;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#student-card{
+  padding: 1rem;
+  place-content: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(295px, 2rem));
+  place-items: center;
+  gap: 1rem;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#addstud-sec{
+  display: flex !important;
+  flex-direction: column !important;
 }
